feat: authentcation, callback, credential added
