# pkg/handlers/credential.go
@@ -3,11 +3,11 @@ package handlers
 import (
 	"encoding/json"
 	"identitysphere-api/models"
+	"identitysphere-api/pkg/providers"
 	"identitysphere-api/services"
 	"identitysphere-api/store"
 	"net/http"
 
-	"github.com/fatih/structs"
 	"github.com/go-playground/validator"
 )
 
@@ -22,6 +22,17 @@ func NewCredentialHandler(ssiService *services.SsiClient, db *store.Store) *Cred
 	return &CredentialHandler{ssiService: ssiService, db: db}
 }
 
+// IssueOAuthCredential godoc
+// @Summary Issue OAuth Credential
+// @Description Issue a new OAuth credential for a user.
+// @Tags Authentication Management
+// @Accept  json
+// @Produce  json
+// @Param issueOAuthCredentialRequest body models.IssueOAuthCredentialRequest true "Issue Credential Request"
+// @Success 200 {object} interface{} "Credential successfully issued"
+// @Failure 400 {string} string "Bad request"
+// @Failure 500 {string} string "Internal server error"
+// @Router /issue-credential [post]
 func (h *CredentialHandler) IssueOAuthCredential(w http.ResponseWriter, r *http.Request) {
 	if r.Method != "POST" {
 		http.Error(w, "Only POST method is allowed", http.StatusMethodNotAllowed)
@@ -46,7 +57,6 @@ func (h *CredentialHandler) IssueOAuthCredential(w http.ResponseWriter, r *http.
 		http.Error(w, "Failed to get schema ID: "+err.Error(), http.StatusInternalServerError)
 		return
 	}
-
 	isSchemaExist := h.ssiService.IsSchemaExists(schema.SchemaID)
 	if !isSchemaExist {
 		http.Error(w, "Failed to get schema ID: "+err.Error(), http.StatusInternalServerError)
@@ -59,8 +69,17 @@ func (h *CredentialHandler) IssueOAuthCredential(w http.ResponseWriter, r *http.
 	if !isDIDExits {
 		http.Error(w, "Failed to get application DID: "+err.Error(), http.StatusInternalServerError)
 	}
-
-	credential, err := h.ssiService.IssueCredentialBySchemaID(app.AppDID, credReq.UserDID, schema.SchemaID, structs.Map(credReq.UserInfo))
+	userInfo, err := providers.GetUserInfo("facebook", credReq.AccessToken)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	credMap, err := models.StructToMap(models.UserInfo{UserID: userInfo.ID, Name: userInfo.Name})
+	if err != nil {
+		http.Error(w, "Failed to convert to map: "+err.Error(), http.StatusInternalServerError)
+	}
+	// TODO:: revokable
+	credential, err := h.ssiService.IssueCredentialBySchemaID(app.AppDID, credReq.UserDID, schema.SchemaID, credMap)
 	if err != nil {
 		http.Error(w, "Failed to issue credential: "+err.Error(), http.StatusInternalServerError)
 	}
@@ -68,5 +87,22 @@ func (h *CredentialHandler) IssueOAuthCredential(w http.ResponseWriter, r *http.
 	json.NewEncoder(w).Encode(credential)
 }
 
+// RevokeOAuthCredential godoc
+// @Summary Revoke OAuth Credential
+// @Description Revoke an existing OAuth credential.
+// @Tags Authentication Management
+// @Accept  json
+// @Produce  json
+// @Param revokeOAuthCredentialRequest body interface{} true "Revoke Credential Request"
+// @Success 200 {string} string "Credential successfully revoked"
+// @Failure 400 {string} string "Bad request"
+// @Failure 500 {string} string "Internal server error"
+// @Router /revoke-credential [post]
 func (h *CredentialHandler) RevokeOAuthCredential(w http.ResponseWriter, r *http.Request) {
+	if r.Method != "POST" {
+		http.Error(w, "Only POST method is allowed", http.StatusMethodNotAllowed)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode("implementation pending")
 }
